chore: some cleanup

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -18,12 +18,39 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "/home/nishaq/Documents/research/rf-metric/notebooks\n"
+            "Using data directory: /home/nishaq/Documents/research/data/rf-data\n"
           ]
         }
       ],
       "source": [
-        "!pwd"
+        "import rf_metric\n",
+        "\n",
+        "data_dir = rf_metric.utils.config[\"RF_DATA_DIR\"]\n",
+        "print(f\"Using data directory: {data_dir}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "id": "eb68583b",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Dataset shape for ModulationMode.ASK_4 at NoiseLevel.POS_20: (4096, 1024, 2)\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy\n",
+        "\n",
+        "mod_mode = rf_metric.data.ModulationMode.ASK_4  # type: ignore\n",
+        "noise_level = rf_metric.data.NoiseLevel.POS_20  # type: ignore\n",
+        "\n",
+        "dataset = numpy.asarray(mod_mode.read(noise_level=noise_level))  # type: ignore\n",
+        "print(f\"Dataset shape for {mod_mode} at {noise_level}: {dataset.shape}\")"
       ]
     }
   ],
